--- a/shoppy-fullstack-app/backend/build.gradle
+++ b/shoppy-fullstack-app/backend/build.gradle
@@ -19,6 +19,14 @@ repositories {
 }
 
 dependencies {
+    // JDBC-jdbcTemplate
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    runtimeOnly 'mysql:mysql-connector-java:8.0.31'
+
+    // lombok
+    compileOnly("org.projectlombok:lombok:1.18.42")
+    annotationProcessor("org.projectlombok:lombok:1.18.42")
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
