--- a/shoppy-fullstack-app/backend/src/main/resources/application.properties
+++ b/shoppy-fullstack-app/backend/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=shoppy-fullstack-app
+# DB ??
+spring.datasource.url=jdbc:mysql://localhost:3306/shoppy
+spring.datasource.username=root
+spring.datasource.password=mysql1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
