--- a/shoppy-fullstack-app/backend/build.gradle
+++ b/shoppy-fullstack-app/backend/build.gradle
@@ -19,6 +19,9 @@ repositories {
 }
 
 dependencies {
+    // spring security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
     // JDBC-jdbcTemplate
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     runtimeOnly 'mysql:mysql-connector-java:8.0.31'
