--- a/jpa-shoppy-fullstack-app/backend/src/main/resources/application.yml
+++ b/jpa-shoppy-fullstack-app/backend/src/main/resources/application.yml
@@ -6,3 +6,10 @@ kakao:
     cid: TC0ONETIME                # 가맹점 코드 (테스트용), 코드 작성 X ❌
     ready-path: /payment/ready      # 카카오페이 호출 주소, 코드 작성 X ❌
     approve-path: /payment/approve  # 카카오페이 인증 주소, 코드 작성 X ❌
+
+## Hibernate 네이밍 규칙 변경
+#spring:
+#  jpa:
+#    hibernate:
+#      naming:
+#        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
