--- a/jpa-shoppy-fullstack-app/backend/src/main/resources/application.properties
+++ b/jpa-shoppy-fullstack-app/backend/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.application.name=shoppy-fullstack-app
-# DB ??
+# DB
 spring.datasource.url=jdbc:mysql://localhost:3306/shoppy
 spring.datasource.username=root
 spring.datasource.password=mysql1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
